[gd_scene load_steps=5 format=3 uid="uid://bjhu88giawsrf"]

[ext_resource type="Texture2D" uid="uid://pp2qfkushurm" path="res://menu/background.png" id="1_cg8td"]
[ext_resource type="Texture2D" uid="uid://c068ha48l8bf4" path="res://menu/title.png" id="2_3moen"]
[ext_resource type="Script" path="res://menu/menu_main.gd" id="2_7n4x2"]

[sub_resource type="Theme" id="Theme_qcy4a"]

[node name="menu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="bg" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_cg8td")

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_7n4x2")

[node name="title" type="TextureRect" parent="menu"]
layout_mode = 2
texture = ExtResource("2_3moen")

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
layout_mode = 2

[node name="btn_play" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_qcy4a")
text = "PLAY"

[node name="btn_options" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="btn_quit" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="menu/VBoxContainer/btn_play" to="menu" method="_on_btn_play_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/btn_options" to="menu" method="_on_btn_options_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/btn_quit" to="menu" method="_on_btn_quit_pressed"]
